--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "vite-plugin-prettier",
-    "version": "0.0.1",
+    "name": "@mpietrucha/vite-plugin-prettier",
+    "version": "0.0.2",
     "license": "MIT",
     "author": {
         "name": "Michał Pietrucha",
@@ -9,6 +9,6 @@
     "type": "module",
     "prettier": "@mpietrucha/prettier",
     "dependencies": {
-        "@mpietrucha/prettier": "^0.0.2"
+        "@mpietrucha/prettier": "^0.0.3"
     }
 }
